fix html5 tech test

--- a/example.html
+++ b/example.html
@@ -37,6 +37,8 @@
        height="300"
        width="600"
        controls>
+  <track src="https://afrostream-img.s3-eu-west-1.amazonaws.com/production/caption/2015/09/913ed362da38f821ed4b-vimeocom136679382.fr.vtt"
+         kind="captions" srclang="fr" label="Francais/burkina">
   <p>
     Your browser doesn't support video. Please <a href="http://browsehappy.com/">upgrade your browser</a> to see the
     example.
