fix bitrate button

--- a/example.html
+++ b/example.html
@@ -86,7 +86,7 @@
     "playReadyLicenseServerURL": "https://lic.staging.drmtoday.com/license-proxy-headerauth/drmtoday/RightsManager.asmx",
     "silverlightFile": "./lib/castlab/3.1.2/dashcs/dashcs.xap",
     "flashFile": '/lib/castlab/3.1.2/dashas/dashas.swf',
-    "techs": ['dashas', /*'dashjs',*/ 'dashcs'],
+    "techs": ['dashas', 'dashjs', 'dashcs'],
     "flashVars": {
       "log": true,
       "watermark": false,//"https://afrostream.tv/assets/images/logo.png",
