replace videojs version 4.11.4

--- a/example.html
+++ b/example.html
@@ -122,9 +122,10 @@
       },
       {
         "_id": "7dcd3193-0efa-4f76-a8e3-9982f66c220c",
-//        "src": "http://origin.afrostream.tv/vod/24hourlovebis/d4eed726882a4be3-sub.ism/d4eed726882a4be3-sub.mpd",
+        "src": "http://origin.afrostream.tv/vod/24hourlovebis/d4eed726882a4be3-sub.ism/d4eed726882a4be3-sub.mpd",
 //        "src": "http://dash.edgesuite.net/akamai/test/caption_test/ElephantsDream/elephants_dream_480p_heaac5_1.mpd",
-        "src": "https://bitdash-a.akamaihd.net/content/sintel/sintel.mpd",
+//        "src": "https://bitdash-a.akamaihd.net/content/sintel/sintel.mpd",
+//        "src": "https://origin.cdn.afrostream.net/vod/24hourlovebis/d4eed726882a4be3.mpd",
         "type": "application/dash+xml",
         "videoId": "3bcc7d8a-8962-4029-a6ed-7d246bf60a8a",
         "importId": 858,
