--- a/example.html
+++ b/example.html
@@ -115,7 +115,7 @@
     }
   }
 
-
+  videojs.Metrics.INTERVAL_PING = 6000;
   player = videojs('video', {
     metrics: {user_id: 33},
     "sources": [
@@ -145,9 +145,9 @@
       }
     ],
     plugins: {
-      audiotracks: {
-        title: 'Langues'
-      }
+//      audiotracks: {
+//        title: 'Langues'
+//      }
 //      ,
 //     texttracks: {
 //     title: 'Sous titres'
@@ -158,7 +158,7 @@
     mute: true,
     controls: true,
     dasheverywhere: config,
-    techOrder: [/*'dasheverywhere', 'dash', 'flash',*/ 'html5']
+    techOrder: ['dasheverywhere', 'dash', 'flash', 'html5']
   }).ready(function () {
     //this.loadVideo('https://origin.cdn.afrostream.net/vod/TheWild_s1ep001/c4ebd55b8bc55289.ism/c4ebd55b8bc55289.mpd', {});
 //    this.enableABRSwitching(true);
