--- a/example.html
+++ b/example.html
@@ -158,7 +158,7 @@
     mute: true,
     controls: true,
     dasheverywhere: config,
-    techOrder: ['dasheverywhere', 'dash', 'flash', 'html5']
+    techOrder: ['html5']
   }).ready(function () {
     //this.loadVideo('https://origin.cdn.afrostream.net/vod/TheWild_s1ep001/c4ebd55b8bc55289.ism/c4ebd55b8bc55289.mpd', {});
 //    this.enableABRSwitching(true);
