add native audioTracks/videoTracks

--- a/demo/index.html
+++ b/demo/index.html
@@ -7,8 +7,9 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css"
         integrity="sha512-dTfge/zgoMYpP7QbHy4gWMEGsbsdZeCXz7irItjcC3sPUFtf0kuFbDz/ixG7ArTxmDjLXDmezHubeNikyKGVyQ=="
         crossorigin="anonymous">
-  <link href="afrostream-player.css" rel="stylesheet">
-
+  <!-- injector:css -->
+  <link rel="stylesheet" href="../dist/afrostream-player.css">
+  <!-- endinjector -->
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -84,8 +85,11 @@
 
 </div>
 <script src="//code.jquery.com/jquery-2.1.4.js"></script>
+<!-- injector:js -->
+<script src="../dist/afrostream-player.js"></script>
+<!-- endinjector -->
 <script src="./libs/smoothie.js"></script>
-<script src="afrostream-player.js"></script>
 <script src="./demo.js"></script>
+<!--<script src="afrostream-player.js"></script>-->
 </body>
 </html>
