--- a/demo/index.html
+++ b/demo/index.html
@@ -491,68 +491,10 @@
     </div><!--/.container-->
   </div>
 </div>
-<script src="//code.jquery.com/jquery-2.1.4.js"></script>
 <!-- injector:js -->
-<script src="../node_modules/video.js/dist/video-js/video.dev.js"></script>
-<script src="../node_modules/videojs-contrib-media-sources/src/videojs-media-sources.js"></script>
-<script src="../node_modules/videojs-contrib-hls/src/videojs-hls.js"></script>
-<script src="../node_modules/videojs-contrib-hls/src/xhr.js"></script>
-<script src="../node_modules/videojs-contrib-hls/src/flv-tag.js"></script>
-<script src="../node_modules/videojs-contrib-hls/src/stream.js"></script>
-<script src="../node_modules/videojs-contrib-hls/src/exp-golomb.js"></script>
-<script src="../node_modules/videojs-contrib-hls/src/h264-extradata.js"></script>
-<script src="../node_modules/videojs-contrib-hls/src/h264-stream.js"></script>
-<script src="../node_modules/videojs-contrib-hls/src/aac-stream.js"></script>
-<script src="../node_modules/videojs-contrib-hls/src/metadata-stream.js"></script>
-<script src="../node_modules/videojs-contrib-hls/src/segment-parser.js"></script>
-<script src="../node_modules/videojs-contrib-hls/src/m3u8/m3u8-parser.js"></script>
-<script src="../node_modules/videojs-contrib-hls/src/playlist.js"></script>
-<script src="../node_modules/videojs-contrib-hls/src/playlist-loader.js"></script>
-<script src="../node_modules/pkcs7/dist/pkcs7.unpad.js"></script>
-<script src="../node_modules/videojs-contrib-hls/src/decrypter.js"></script>
-<script src="../node_modules/videojs-contrib-hls/src/bin-utils.js"></script>
-<script src="../node_modules/dashjs/dist/dash.all.js"></script>
-<script src="../node_modules/videojs-chromecast/dist/videojs.chromecast.js"></script>
-<script src="../bower_components/videojs-ga/dist/videojs.ga.js"></script>
-<script src="../node_modules/videojs-metrics/dist/videojs-metrics.js"></script>
-<script src="../lib/afrostream-player.js"></script>
-<script src="../lib/closure.js"></script>
-<script src="../lib/component/control-bar/audio-tracks.js"></script>
-<script src="../lib/component/control-bar/bitrate-control.js"></script>
-<script src="../lib/component/control-bar/progress-tip.js"></script>
-<script src="../lib/component/loading-spinner.js"></script>
-<script src="../lib/core/player.js"></script>
-<script src="../lib/media/dash.js"></script>
-<script src="../lib/media/html5.js"></script>
-<script src="../lib/media/media.js"></script>
-<!--&lt;!&ndash; endinjector &ndash;&gt;-->
-<!--<script src="./libs/util.js"></script>-->
-<!--<script src="./libs/streamDef.js"></script>-->
-<!--<script src="./libs/focusManager.js"></script>-->
-<!--<script src="./libs/logger.js"></script>-->
-<!--<script src="./libs/xhr.js"></script>-->
-<!--<script src="./libs/timeout.js"></script>-->
-<!--<script src="./libs/testView.js"></script>-->
-<!--<script src="./libs/fullTestList.js"></script>-->
-<!--<script src="./libs/fullTestView.js"></script>-->
-<!--<script src="./libs/compactTestList.js"></script>-->
-<!--<script src="./libs/compactTestView.js"></script>-->
-<!--<script src="./libs/mediaSourcePortability.js"></script>-->
-<!--<script src="./libs/encryptedMediaPortability.js"></script>-->
-<!--<script src="./libs/emeManager.js"></script>-->
-<!--<script src="./libs/test.js"></script>-->
-<!--<script src="./libs/testTypes.js"></script>-->
-<!--<script src="./libs/msutil.js"></script>-->
-<!--<script src="./libs/mp4.js"></script>-->
-<!--<script src="./libs/webm.js"></script>-->
-<!--<script src="./libs/conformanceTest.js"></script>-->
-<!--<script src="./libs/performanceTest.js"></script>-->
-<!--<script src="./libs/enduranceTest.js"></script>-->
-<!--<script src="./libs/emeTest.js"></script>-->
-<!--<script src="./libs/progressiveTest.js"></script>-->
-<!--<script src="./libs/main.js"></script>-->
+<!-- endinjector -->
+<script src="//code.jquery.com/jquery-2.1.4.js"></script>
 <script src="./libs/smoothie.js"></script>
 <script src="./demo.js"></script>
-<!--<script src="afrostream-player.js"></script>-->
 </body>
 </html>
