injector grunt on production

--- a/demo/index.html
+++ b/demo/index.html
@@ -492,6 +492,7 @@
   </div>
 </div>
 <!-- injector:js -->
+<script src="../dist/afrostream-player.js"></script>
 <!-- endinjector -->
 <script src="//code.jquery.com/jquery-2.1.4.js"></script>
 <script src="./libs/smoothie.js"></script>
