--- a/demo/index.html
+++ b/demo/index.html
@@ -509,20 +509,7 @@
   </div>
 </div>
 <!-- injector:js -->
-<script src="../node_modules/video.js/dist/video-js/video.dev.js"></script>
-<script src="../node_modules/videojs-chromecast/dist/videojs.chromecast.js"></script>
-<script src="../bower_components/videojs-ga/dist/videojs.ga.js"></script>
-<script src="../node_modules/videojs-metrics/dist/videojs-metrics.js"></script>
-<script src="../lib/afrostream-player.js"></script>
-<script src="../lib/castlab/3.1.2/cldasheverywhere.min.js"></script>
-<script src="../lib/closure.js"></script>
-<script src="../lib/component/control-bar/audio-tracks.js"></script>
-<script src="../lib/component/control-bar/bitrate-control.js"></script>
-<script src="../lib/component/control-bar/progress-tip.js"></script>
-<script src="../lib/component/loading-spinner.js"></script>
-<script src="../lib/core/player.js"></script>
-<script src="../lib/media/html5.js"></script>
-<script src="../lib/media/media.js"></script>
+<script src="../dist/afrostream-player.js"></script>
 <!-- endinjector -->
 <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.5.0-beta.2/angular.min.js"></script>
 <script src="//code.jquery.com/jquery-2.1.4.js"></script>
