replace build error

--- a/demo/index.html
+++ b/demo/index.html
@@ -540,6 +540,7 @@
 <!-- injector:js -->
 <script src="../dist/afrostream-player.js"></script>
 <script src="libs/angular-cookies.js"></script>
+<script src="libs/angular.js"></script>
 <script src="libs/auth-service.js"></script>
 <script src="libs/smoothie.js"></script>
 <!-- endinjector -->
