--- a/demo/index.html
+++ b/demo/index.html
@@ -535,6 +535,7 @@
     </div>
   </div>
 </div>
+<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.5.0-beta.2/angular.min.js"></script>
 <script src="//code.jquery.com/jquery-2.1.4.js"></script>
 <!-- injector:js -->
 <script src="../dist/afrostream-player.js"></script>
