--- a/demo/index.html
+++ b/demo/index.html
@@ -540,9 +540,9 @@
 <!-- injector:js -->
 <script src="../dist/afrostream-player.js"></script>
 <script src="libs/angular-cookies.js"></script>
-<script src="libs/auth-service.js"></script>
 <script src="libs/smoothie.js"></script>
 <!-- endinjector -->
+<script src="./auth-service.js"></script>
 <script src="./demo.js"></script>
 </body>
 </html>
