--- a/demo/castlab.html
+++ b/demo/castlab.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8"/>
   <title>castLabs DASH Everywhere Player Integration example</title>
-  <link href="http://vjs.zencdn.net/4.11.4/video-js.css" rel="stylesheet">
-  <script src="http://vjs.zencdn.net/4.11.4/video.js"></script>
+  <link href="//vjs.zencdn.net/4.11.4/video-js.css" rel="stylesheet">
+  <script src="//vjs.zencdn.net/4.11.4/video.js"></script>
   <style>
     .vjs-default-skin .vjs-audiotracks-button:before {
       content: "\e600"; /* cog icon */
