try to load external vtt

--- a/demo/index.html
+++ b/demo/index.html
@@ -58,7 +58,7 @@
   <div class="container">
     <div class="row">
       <div id="wrapper">
-        <video id="player" crossorigin="anonymous"
+        <video id="player" crossorigin="true"
                class="video-js vjs-afrostream-skin"
                height="300"
                width="600">
