replace assetId for castlab demo

--- a/demo/castlab.html
+++ b/demo/castlab.html
@@ -40,7 +40,7 @@
       "trackType": "",
       "policy": ""
     },
-    "assetId": "qa_test",
+    "assetId": "b829352c949f8bfc",
     "variantId": "",
     "debug": true,
     "ABRParameters": {
