--- a/demo/index.html
+++ b/demo/index.html
@@ -136,6 +136,44 @@
         </tbody>
       </table>
     </div>
+    <div class="table-responsive dotted">
+      <table class="table  table_indent ">
+        <tbody>
+        <tr class="active table_nointent">
+          <td style="vertical-align:middle"><strong>P2P Data</strong></td>
+          <td></td>
+        </tr>
+        <tr>
+          <td>P2P Ratio:</td>
+          <td><span id='p2pWebRatio'>0.0</span></td>
+        </tr>
+        <tr>
+          <td>CDN Chunks</td>
+          <td><span id='chunksFromCDN'>0.0</span></td>
+        </tr>
+        <tr>
+          <td>P2P Chunks</td>
+          <td><span id='chunksFromP2P'>0.0</span></td>
+        </tr>
+        <tr>
+          <td>P2P Chunks Sent</td>
+          <td><span id='chunksSent'>0.0</span></td>
+        </tr>
+        <tr>
+          <td>P2P Buffer length</td>
+          <td><span id='bufferLength'>0.0</span></td>
+        </tr>
+        <tr>
+          <td>P2P Swarm size</td>
+          <td><span id='swarmSize'>0.0</span></td>
+        </tr>
+        <tr>
+          <td>P2P Startup Time</td>
+          <td><span id='startupTime'>0.0</span></td>
+        </tr>
+        </tbody>
+      </table>
+    </div>
     <div class="page-slice white-gradient shadow-top">
       <div class="container">
         <div class="row">
@@ -538,8 +576,29 @@
 <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.5.0-beta.2/angular.min.js"></script>
 <script src="//code.jquery.com/jquery-2.1.4.js"></script>
 <!-- injector:js -->
-<script src="../dist/afrostream-player.js"></script>
+<script src="../node_modules/dashjs/dist/dash.debug.js"></script>
+<script src="../node_modules/video.js/dist/video-js/video.dev.js"></script>
+<script src="../node_modules/videojs-chromecast/dist/videojs.chromecast.js"></script>
+<script src="../bower_components/videojs-ga/dist/videojs.ga.js"></script>
+<script src="../node_modules/videojs-metrics/dist/videojs-metrics.js"></script>
+<script src="../lib/afrostream-player.js"></script>
+<script src="../lib/component/control-bar/audio-tracks.js"></script>
+<script src="../lib/component/control-bar/bitrate-control.js"></script>
+<script src="../lib/component/control-bar/next-control.js"></script>
+<script src="../lib/component/control-bar/progress-tip.js"></script>
+<script src="../lib/component/error-screen.js"></script>
+<script src="../lib/component/flash-bloc-detection.js"></script>
+<script src="../lib/component/loading-spinner.js"></script>
+<script src="../lib/core/player.js"></script>
+<script src="../lib/media/dash.js"></script>
+<script src="../lib/media/dashas.js"></script>
+<script src="../lib/media/easy-broadcast.js"></script>
+<script src="../lib/media/html5.js"></script>
+<script src="../lib/media/media.js"></script>
+<script src="../lib/media/osmf.js"></script>
 <script src="libs/angular-cookies.js"></script>
+<script src="libs/easy-broadcast.js"></script>
+<script src="libs/primus.js"></script>
 <script src="libs/smoothie.js"></script>
 <!-- endinjector -->
 <script src="./auth-service.js"></script>
