finalize first step easybroadcast

--- a/demo/index.html
+++ b/demo/index.html
@@ -575,6 +575,7 @@
 </div>
 <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.5.0-beta.2/angular.min.js"></script>
 <script src="//code.jquery.com/jquery-2.1.4.js"></script>
+
 <!-- injector:js -->
 <script src="../dist/afrostream-player.js"></script>
 <script src="libs/angular-cookies.js"></script>
@@ -584,5 +585,9 @@
 <!-- endinjector -->
 <script src="./auth-service.js"></script>
 <script src="./demo.js"></script>
+
+<!-- easyBroadcast -->
+<script
+  src="https://www.easybroadcast.fr/libs/65/EB.js&s2member_file_download_key=dbb00d0abec8ccb2295b7d2df5325f6b"></script>
 </body>
 </html>
