--- a/test/index.html
+++ b/test/index.html
@@ -2,20 +2,17 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Afrostream Player</title>
-  <link rel="stylesheet" href="../node_modules/qunitjs/qunit/qunit.css">
+  <title>videojs-metrics Unit Tests</title>
+  <link rel="stylesheet" href="/node_modules/qunitjs/qunit/qunit.css">
 </head>
 <body>
-  <div id="qunit"></div>
-  <div id="qunit-fixture"></div>
-  <script src="../node_modules/qunitjs/qunit/qunit.js"></script>
-  <script>
-    test('the environment is sane', function() {
-      ok(true, 'everything is swell');
-    });
-  </script>
-  <script src="../node_modules/video.js/dist/video-js/video.js"></script>
-  <script src="../lib/afrostream-player.js"></script>
-  <script src="afrostream-player.test.js"></script>
+<div id="qunit"></div>
+<div id="qunit-fixture"></div>
+<script src="/node_modules/sinon/pkg/sinon.js"></script>
+<script src="/node_modules/sinon/pkg/sinon-ie.js"></script>
+<script src="/node_modules/qunitjs/qunit/qunit.js"></script>
+<script>QUnit.config.reorder = false;</script>
+<script src="/node_modules/video.js/dist/video.js"></script>
+<script src="/dist-test/videojs-afrostream.js"></script>
 </body>
 </html>
