--- a/test/index.html
+++ b/test/index.html
@@ -13,6 +13,6 @@
 <script src="/node_modules/qunitjs/qunit/qunit.js"></script>
 <script>QUnit.config.reorder = false;</script>
 <script src="/node_modules/video.js/dist/video.js"></script>
-<script src="/dist-test/videojs-afrostream.js"></script>
+<script src="/dist-test/afrostream.js"></script>
 </body>
 </html>
