--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </style>
 </head>
 <body>
-<video class="video-js vjs-default-skin" controls width="640px" height="360px">
+<video class="video-js vjs-afrostream-skin" controls width="640px" height="360px">
   <source
     src="https://hw.cdn.afrostream.net/vod/WILDWILDWEST_FILMLM_16020931/3d14bbf03db5f0b5.ism/3d14bbf03db5f0b5.mpd"
     type="application/dash+xml"/>
