--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
 
   var player = videojs(document.querySelector('video'), {
     autoplay: true,
-    "metrics": {
+    aspectRatio: "640:267",
+    metrics: {
       "user_id": ""
     },
     techOrder: ["dash", "html5"]
