fix metrics errors

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     autoplay: true,
     aspectRatio: "640:267",
     metrics: {
-      "user_id": ""
+      "user_id": 34
     },
     techOrder: ["dash", "html5"]
   });
