add options for buffer

--- a/index.html
+++ b/index.html
@@ -23,15 +23,17 @@
 </head>
 <body>
 <video class="video-js vjs-afrostream-skin" controls width="640px" height="360px">
-  <source
-    src="http://dash.edgesuite.net/akamai/test/caption_test/ElephantsDream/elephants_dream_480p_heaac5_1.mpd"
-    type="application/dash+xml"/>
+  <!--<source-->
+  <!--src="http://dash.edgesuite.net/akamai/test/caption_test/ElephantsDream/elephants_dream_480p_heaac5_1.mpd"-->
+  <!--type="application/dash+xml"/>-->
+  <!--<source src="https://hw.cdn.afrostream.net/live/bet.isml/bet.mpd"-->
+  <!--type="application/dash+xml"/>-->
   <source
     src="https://hw.cdn.afrostream.net/vod/WILDWILDWEST_FILMLM_16020931/3d14bbf03db5f0b5.ism/3d14bbf03db5f0b5.mpd"
     type="application/dash+xml"/>
-  <source
-    src="https://bitdash-a.akamaihd.net/content/sintel/hls/playlist.m3u8"
-    type="application/x-mpegURL"/>
+  <!--<source-->
+  <!--src="https://bitdash-a.akamaihd.net/content/sintel/hls/playlist.m3u8"-->
+  <!--type="application/x-mpegURL"/>-->
 </video>
 <ul>
   <li><a href="/test/">Run unit tests in browser.</a></li>
